--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -6,60 +6,22 @@ body, html {
     background-color: var(--color-background);
     color: var(--color-text);
     height: 100%;
-}
-
-/* Navbar */
-.navbar {
-    background-color: var(--color-accent);
-    padding: 0.8rem 2rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    position: fixed;
-    top: 0;
     width: 100%;
-    z-index: 1000;
-}
-
-.navbar h1 {
-    font-size: 1.5rem;
-    margin: 0;
-}
-
-.navbar ul {
-    list-style: none;
-    display: flex;
-    gap: 1.5rem;
-    margin: 0;
-}
-
-.navbar ul li a {
-    color: white;
-    text-decoration: none;
-    font-size: 1rem;
-    font-weight: 500;
-}
-
-.navbar ul li a:hover {
-    text-decoration: underline;
 }
 
 /* Wrapper */
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Dos columnas si hay espacio */
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1.5rem;
-    padding: 6rem 2rem 2rem; /* Espacio extra para compensar la navbar fija */
+    padding: 6rem 2rem 2rem;
     justify-content: center;
     align-content: flex-start;
-    min-height: calc(100vh - 6rem); /* Asegurarse que ocupe toda la pantalla */
+    min-height: calc(100vh - 6rem);
 }
 
 /* Section Cards */
 .section {
-    /* background-color: white; */
     background-color: var(--color-secondary-background);
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
