--- a/client/src/styles/SignupSignin.css
+++ b/client/src/styles/SignupSignin.css
@@ -1,8 +1,11 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
 }
 
 body, html {
@@ -10,17 +13,19 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
+  background: url('/home/usuario/Proyecto-E02/client/public/images/Fondovaporeon.jpg') no-repeat center center fixed;
+  background-size: cover;
 }
 
 .box {
   width: 100%;
   max-width: 400px;
-  /* margin: 0 auto; */
   padding: 40px;
   background: #1c1c1c;
   border-radius: 5%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  transform: translateX(-300px); /* Desplaza ligeramente hacia la izquierda */
 }
 
 .box h2 {
@@ -82,4 +87,11 @@ body, html {
 
 .box p a:hover {
   color: #067685;
+}
+
+.logo {
+  width: 300px;
+  height: auto;
+  margin-bottom: 20px;
+  transform: translateX(-300px); /* Desplaza ligeramente hacia la izquierda */
 }
