--- a/client/src/styles/AddCard.css
+++ b/client/src/styles/AddCard.css
@@ -11,10 +11,15 @@
 
 /* Contenedor principal para añadir cartas */
 .add-card-container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     box-sizing: border-box;
-    position: fixed;
+}
+
+/* Contenido para añadir cartas */
+.add-card-content {
+    padding: 2rem;
+    position: relative;
     top: 0;
     left: 0;
     overflow-y: auto;
@@ -28,13 +33,8 @@
     gap: 10px;
 }
 
-/* Contenido para añadir cartas */
-.add-card-content {
-    padding: 2rem;
-}
-
 /* Estilos para los encabezados h1 */
-.add-card-container h1 {
+.add-card-content h1 {
     color: #333;
     font-size: 2.5rem;
     font-weight: bold;
@@ -45,7 +45,7 @@
 }
 
 /* Contenedor de las tarjetas */
-.cards-container {
+.cards-content {
     margin-top: 20px;
     display: flex;
     justify-content: center;
