--- a/client/src/styles/Intercambio.css
+++ b/client/src/styles/Intercambio.css
@@ -1,24 +1,23 @@
 .intercambio-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  height: 100vh;
-  overflow-y: auto;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .intercambio-content {
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  align-items: center;
+  padding: 20px; /* Añade un padding para separar del borde */
   flex-grow: 1;
   overflow-y: auto;
 }
 
 .user-cards, .search-users {
   width: 45%;
-  max-height: 80vh;
+  max-height: 60vh;
   overflow-y: auto;
+  overflow-x: auto;
 }
 
 .cards-list {
@@ -48,7 +47,7 @@ input[type="text"] {
   margin-bottom: 10px;
 }
 
-button {
+.intercambio-container button {
   padding: 10px 20px;
   background-color: #007bff;
   color: white;
@@ -57,6 +56,6 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.intercambio-container button:hover {
   background-color: #0056b3;
 }
