--- a/client/src/styles/Mycollection.css
+++ b/client/src/styles/Mycollection.css
@@ -1,5 +1,5 @@
 /* General */
-body, html {
+/* body, html {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
@@ -7,14 +7,19 @@ body, html {
     color: var(--color-text);
     height: 100%;
     width: 100%;
-}
+} */
 
 /* Contenedor principal de la colección */
 .collection-container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     box-sizing: border-box;
-    position: fixed;
+}
+
+/* Contenido de la colección */
+.collection-content {
+    padding: 2rem;
+    position: relative;
     top: 0;
     left: 0;
     overflow-y: auto;
@@ -28,13 +33,8 @@ body, html {
     gap: 10px;
 }
 
-/* Contenido de la colección */
-.collection-content {
-    padding: 2rem;
-}
-
 /* Estilos para los encabezados h1 */
-.collection-container h1 {
+.collection-content h1 {
     color: #333;
     font-size: 2.5rem;
     font-weight: bold;
@@ -45,7 +45,7 @@ body, html {
 }
 
 /* Contenedor de las tarjetas */
-.cards-container {
+.cards-content {
     margin-top: 20px;
     display: flex;
     justify-content: center;
